agregado span para dar margin a los elementos li

--- a/index.html
+++ b/index.html
@@ -24,55 +24,55 @@
         to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
       </div>
     </div>
-    <div class="preparation-time-list">
-      <span>Preparation time</span>
+    <div class="preparation">
+      <span class="preparation-title">Preparation time</span>
       <ul>
-        <li><strong>Total:</strong> Approximately 10 minutes</li>
-        <li><strong>Preparation:</strong> 5 minutes</li>
-        <li><strong>Cooking:</strong> 5 minutes</li>
+        <li><span><strong>Total:</strong> Approximately 10 minutes</span></li>
+        <li><span><strong>Preparation:</strong> 5 minutes</span></li>
+        <li><span><strong>Cooking:</strong> 5 minutes</span></li>
       </ul>
     </div>
     <div class="ingredients">
-      <span>Ingredients</span>
+      <span class="title">Ingredients</span>
       <ul>
-        <li>2-3 large eggs</li>
-        <li>Salt, to taste</li>
-        <li>Pepper, to taste</li>
-        <li>1 tablespoon of butter or oil</li>
-        <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+        <li><span>2-3 large eggs</span></li>
+        <li><span>Salt, to taste</span></li>
+        <li><span>Pepper, to taste</span></li>
+        <li><span>1 tablespoon of butter or oil</span></li>
+        <li><span>Optional fillings: cheese, diced vegetables, cooked meats, herbs</span></li>
       </ul>
     </div>
     <hr>
     <div class="instructions">
-      <span>Instructions</span>
+      <span class="title">Instructions</span>
       <ol>
         <li>
-          Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+          <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
           You can add a tablespoon of water or milk for a fluffier texture.
         </li>
         <li>
-          Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
+          <strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
         </li>
         <li>
-          Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+          <strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
           the eggs evenly coat the surface.
         </li>
         <li>
-          Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
+          <strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the 
           middle, sprinkle your chosen fillings over one half of the omelette.
         </li>
         <li>
-          Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
+          <strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the 
           fillings. Let it cook for another minute, then slide it onto a plate.
         </li>
         <li>
-          Enjoy: Serve hot, with additional salt and pepper if needed.
+          <strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
         </li>
       </ol>
     </div>
     <hr>
     <div class="nutrition">
-      <span>Nutrition</span>
+      <span class="title">Nutrition</span>
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
       <table>
         <tr>
