--- a/index.html
+++ b/index.html
@@ -46,28 +46,27 @@
     <div class="instructions">
       <span class="title">Instructions</span>
       <ol>
-        <li>
-          <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+        <li><div>
+          <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are </br> well mixed. 
           You can add a tablespoon of water or milk for a fluffier texture.
-        </li>
-        <li>
+        </div></li>
+        <li><div>
           <strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
-        </li>
-        <li>
+        </div></li>
+        <li><div>
           <strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
           the eggs evenly coat the surface.
-        </li>
-        <li>
+        </div></li>
+        <li><div>
           <strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the 
           middle, sprinkle your chosen fillings over one half of the omelette.
-        </li>
-        <li>
-          <strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the 
+        </div></li>
+        <li><div><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and folds it over the 
           fillings. Let it cook for another minute, then slide it onto a plate.
-        </li>
-        <li>
+        </div></li>
+        <li><div>
           <strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
-        </li>
+        </div></li>
       </ol>
     </div>
     <hr>
@@ -76,20 +75,20 @@
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
       <table>
         <tr>
-          <td>Calories</td>
-          <td>277kcal</td>
+          <td><span>Calories</span></td>
+          <td><span class="table-column-color">277kcal</span></td>
         </tr>
         <tr>
-          <td>Carbs</td>
-          <td>0g</td>
+          <td><span>Carbs</span></td>
+          <td><span class="table-column-color">0g</span></td>
         </tr>
         <tr>
-          <td>Protein</td>
-          <td>20g</td>
+          <td><span>Protein</span></td>
+          <td><span class="table-column-color">20g</span></td>
         </tr>
-        <tr>
-          <td>Fat</td>
-          <td>22g</td>
+        <tr >
+          <td class="border-white"><span>Fat</span></td>
+          <td class="border-white"><span class="table-column-color">22g</span></td>
         </tr>
       </table>
     </div>
