agregado class steps

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
       </div>
     </div>
+    <div class="steps">
     <div class="preparation">
       <span class="preparation-title">Preparation time</span>
       <ul>
@@ -91,6 +92,7 @@
           <td class="border-white"><span class="table-column-color">22g</span></td>
         </tr>
       </table>
+    </div>
     </div>
   </main>
   <div class="attribution">
