--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Ezequiel Astrada</a>.
+    Coded by <a href="https://github.com/ezequielastrada">Ezequiel Astrada</a>.
   </div>
 </body>
 </html>
